--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -11,10 +11,10 @@ spring:
     pathmatch:
       matching-strategy: ant_path_matcher
   datasource:
-    driver-class-name: net.sf.log4jdbc.sql.jdbcapi.DriverSpy
-    url: jdbc:log4jdbc:h2:mem:shop;MODE=MySQL;DATABASE_TO_LOWER=TRUE;
-    username: musinsa
-    password: white12!
+    driver-class-name: org.mariadb.jdbc.Driver
+    url: "jdbc:mariadb://localhost:3306/musinsa?autoReconnect=true"
+    username: root
+    password: 1234
     dbcp2:
       initial-size: 1
       max-total: 50
